# inspirv-rust

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
etc/: spirv.json
glsl-examples/: cast.glsl.vert  cast.spv.dis  constbuffer.glsl.dis  constbuffer.glsl.vert  empty.spv.dis  fragcoord.frag  fragcoord.spv.dis  function_call.dis  function_call.vert  if.glsl.vert  matrix.glsl.vert  matrix.spv.dis  references.glsl.vert  references.spv.dis  struct.glsl.vert  struct.spv.dis  texture.glsl.frag  texture.spv.dis  vec.glsl.vert  vec.spv.dis  vec_op.glsl.vert  vec_op.spv.dis
libcore/: cmp.rs  internal_macros.rs  lib.rs  ops.rs
libcore/iter/: iterator.rs  mod.rs  range.rs  traits.rs
libcore/num/: f32.rs
libstd/: Cargo.toml  image.rs  interface.rs  matrix.rs  vector.rs
rust-examples/: quad.rs  test.rs
rust-examples/core/: clone.rs  cmp.rs  lib.rs  mod.rs  ops.rs
rust-examples/core_spirv/: Cargo.toml  clone.rs  default.rs  lib.rs  macros.rs  marker.rs  ops.rs  option.rs
rust-examples/std_spirv/: Cargo.toml  interface.rs  lib.rs  matrix.rs  mod.rs  vector.rs
src/: adt.rs  attribute.rs  attributes.rs  block.rs  collector.rs  constants.rs  context.rs  error.rs  intrinsic.rs  lib.rs  lvalue.rs  mod.rs  monomorphize.rs  operand.rs  rvalue.rs  statement.rs  thetis.rs  traits.rs  trans.rs  trans_item.rs  type_of.rs
src/legacy/: error.rs  monomorphize.rs  traits.rs
src/thetis/: adt.rs  attributes.rs  block.rs  collector.rs  context.rs  error.rs  lvalue.rs  mod.rs  monomorphize.rs  rvalue.rs  statement.rs  terminator.rs  trans_item.rs  type_of.rs
tests/: tests.rs
(+11 files in other folders)
